2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* pandora_windows_service.cc: Fixed some bugs
	of the type conversions 

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* pandora_windows_service.cc: Added support for
	custom fields

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* modules/pandora_module_factory.cc: Fix a few
	variable declaration bugs

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* modules/pandora_module_factory.cc: Added macros
	support to the module_exec command of the module
	configuration

2012-11-19  Sergio Martin <sergio.martin@artica.es>

	* pandora_windows_service.cc: Added new fields of 
	agent in XML header like custom_id and url_address.
	Added coordinates data (not gis_exec yet)

2012-11-19  Sergio Martin <sergio.martin@artica.es>
	
	* modules/pandora_module.h
	modules/pandora_module.cc: Fixed type conflicts in the
	last changes

2012-11-19  Sergio Martin <sergio.martin@artica.es>

	* modules/pandora_module.h
	modules/pandora_module_factory.cc
	modules/pandora_module.cc: Added several new module fields
	to the XML

2012-04-19  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Default to generic_data if no module_type
	  is not set.

	* installer/pandora.mpi: Remove the util directory from the PATH when
	  uninstalling.

2012-02-07  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Convert tentacle_timeout to milliseconds.

2012-02-02  Ramon Novoa  <rnovoa@artica.es>

	* installer/pandora.mpi: Added an uninstall action to delete
	  the agent's at job.

	* installer/scripts/delete_at_job.bat: Added to repository. Batch
	  script to delete the agent's at job.

2012-01-30  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_regexp.cc: Do not open the file in the
	  constructor to avoid trouble if other modules modify it before
	  the regexp module runs.

2012-01-19  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_odbc.cc: Check for NULL pointers.
